myteo/test/analyze/type_check/type_cast/basic.exp
Error: Expected type `Int` but found `Unit`
test/analyze/type_check/type_cast/basic.myte:13:3-5
 13 |   ((): Int);
    |    ^^

Error: Expected type `Int` but found `Int -> String`
test/analyze/type_check/type_cast/basic.myte:14:3-14
 14 |   (intToString: Int);
    |    ^^^^^^^^^^^

Error: Expected type `Unit` but found `Bool`
test/analyze/type_check/type_cast/basic.myte:17:3
 17 |   (x: Unit);
    |    ^