myteo/test/analyze/type_check/type_cast/basic.myte
module test

fun intToString(x: Int): String {
  return "";
}

fun main() {
  ((): Unit);
  (1: Int);
  (true: Bool);
  ("": String);

  ((): Int);
  (intToString: Int);

  val x: Bool = true;
  (x: Unit);
}